--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/core": "~9.1.0-rc.1",
     "@angular/forms": "~9.1.0-rc.1",
     "@angular/localize": "^9.1.0",
+    "@angular/material": "^9.2.0",
     "@angular/platform-browser": "~9.1.0-rc.1",
     "@angular/platform-browser-dynamic": "~9.1.0-rc.1",
     "@angular/router": "~9.1.0-rc.1",
