--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~9.1.0-rc.1",
     "@ng-bootstrap/ng-bootstrap": "^6.0.2",
     "bootstrap": "^4.4.1",
+    "jquery": "^3.5.0",
     "ngx-bootstrap": "^5.6.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
