--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@angular/platform-browser-dynamic": "~9.1.0-rc.1",
     "@angular/router": "~9.1.0-rc.1",
     "@ng-bootstrap/ng-bootstrap": "^6.0.2",
+    "angular-chart.js": "^1.1.1",
     "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "jquery": "^3.5.0",
+    "ng2-charts": "^2.3.0",
     "ngx-bootstrap": "^5.6.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
