--- a/package.json
+++ b/package.json
@@ -37,10 +37,11 @@
     "@angular/cli": "~9.1.0-rc.0",
     "@angular/compiler-cli": "~9.1.0-rc.1",
     "@angular/language-service": "~9.1.0-rc.1",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
+    "empty-module": "0.0.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.4.1",
