--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "jquery": "^3.5.0",
+    "jspdf": "^1.5.3",
     "ng2-charts": "^2.3.0",
     "ngx-bootstrap": "^5.6.1",
     "rxjs": "~6.5.4",
@@ -39,6 +40,7 @@
     "@angular/language-service": "~9.1.0-rc.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "empty-module": "0.0.2",
