--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "@ng-bootstrap/ng-bootstrap": "^6.0.2",
     "angular-chart.js": "^1.1.1",
     "bootstrap": "^4.4.1",
-    "chart.js": "^2.9.3",
+    "chart.js": "^2.9.4",
     "jquery": "^3.5.0",
     "jspdf": "^1.5.3",
+    "lodash": "^4.17.21",
     "ng2-charts": "^2.3.0",
     "ngx-bootstrap": "^5.6.1",
-    "rxjs": "~6.5.4",
+    "rxjs": "^6.5.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
